Makefile: also ship dependencies.csv

--- a/project.conf
+++ b/project.conf
@@ -4,7 +4,7 @@ version=20250912
 
 targets=dependencies.md
 subdirs=src
-dist=Makefile,README.md
+dist=Makefile,README.md,dependencies.csv
 
 #dist
 [README.md]
