aobc-generate: convert the database to YAML

--- a/project.conf
+++ b/project.conf
@@ -4,7 +4,7 @@ version=20250912
 
 targets=dependencies.md
 subdirs=src
-dist=Makefile,README.md,dependencies.csv
+dist=Makefile,README.md,database.yml
 
 #dist
 [README.md]
@@ -14,4 +14,4 @@ install=$(PREFIX)/share/doc/$(PACKAGE)
 [dependencies.md]
 type=command
 command=$(OBJDIR)src/aobc-generate
-depends=$(OBJDIR)src/aobc-generate,dependencies.csv
+depends=$(OBJDIR)src/aobc-generate,database.yml
