project.conf: introduce a formatting target

--- a/project.conf
+++ b/project.conf
@@ -2,7 +2,7 @@ vendor=FreeBSD-Foundation
 package=alpha-omega-beach-cleaning
 version=20250912
 
-targets=dependencies.md
+targets=dependencies.md,format
 subdirs=src
 dist=Makefile,README.md,database.yml
 
@@ -15,3 +15,9 @@ install=$(PREFIX)/share/doc/$(PACKAGE)
 type=command
 command=$(OBJDIR)src/aobc-generate
 depends=$(OBJDIR)src/aobc-generate,database.yml
+
+[format]
+type=command
+command=go fmt src/cmd/aobc-generate/aobc-generate.go
+phony=1
+enabled=0
