project.conf: register the security.md target

--- a/project.conf
+++ b/project.conf
@@ -2,7 +2,7 @@ vendor=FreeBSD-Foundation
 package=alpha-omega-beach-cleaning
 version=20250912
 
-targets=dependencies.md,format
+targets=dependencies.md,security.md,format
 subdirs=src
 dist=Makefile,README.md,database.yml
 
@@ -12,6 +12,11 @@ install=$(PREFIX)/share/doc/$(PACKAGE)
 
 #targets
 [dependencies.md]
+type=command
+command=$(OBJDIR)src/aobc-generate
+depends=$(OBJDIR)src/aobc-generate,database.yml
+
+[security.md]
 type=command
 command=$(OBJDIR)src/aobc-generate
 depends=$(OBJDIR)src/aobc-generate,database.yml
