COPYING: import license file

--- a/project.conf
+++ b/project.conf
@@ -4,7 +4,7 @@ version=20250922
 
 targets=dependencies.md,security.md,format
 subdirs=src
-dist=Makefile,README.md,database.yml
+dist=COPYING,Makefile,README.md,database.yml
 
 #dist
 [README.md]
