database.yml: disambiguate URL and Source for pkg-config

--- a/database.yml
+++ b/database.yml
@@ -9,7 +9,7 @@ PkgConfigColumns:
   - homepage: URL
   - version: Version
   - license: License
-  - homepage: Source
+  - source: Source
 PlanColumns:
   - title: Component
   - plan: Plan
