database.yml: mark OpenSSL present in the kernel

--- a/database.yml
+++ b/database.yml
@@ -221,6 +221,7 @@ Sections:
       - homepage: https://openssl-library.org
       - security:
         - crypto
+        - kernel
         - network
         - user
   - System Libraries:
