database.yml: add Git to the list
Even though it is not part of the base system, Git is very much a
third-party dependency. It is relevant for the build system and CI/CD
infrastructure, for the integrity of the source code, and for the
development of FreeBSD.

As suggested by cperciva@; thank you!

--- a/database.yml
+++ b/database.yml
@@ -43,6 +43,14 @@ Sections:
       - homepage: https://sourceforge.net/projects/elftoolchain/
       - security:
         - build
+    Git:
+      - upstream: Git
+      - homepage: https://git-scm.com
+      - security:
+        - build
+        - crypto
+        - network
+        - user
     libcxxrt:
       - directory: contrib/libcxxrt
       - upstream:
