database.yml: add more information

--- a/database.yml
+++ b/database.yml
@@ -299,6 +299,7 @@ Sections:
         - user
       - plan: fix
     OpenSSL:
+      - description: OpenSSL cryptography library
       - directory: crypto/openssl
       - version: 3.5.3
       - upstream: OpenSSL
@@ -452,6 +453,7 @@ Sections:
         - user
       - plan: fix
     liblzma:
+      - description: General purpose data compression library
       - directory: contrib/xz
       - version: 5.8.1
       - upstream: Tukaani
@@ -463,16 +465,22 @@ Sections:
         - user
       - plan: fix
     libmagic (file):
+      - description: Magic number recognition library
       - directory: contrib/file
       - upstream: Ian Darwin
       - homepage: https://www.darwinsys.com/file/
+      - source: https://github.com/file/file
+      - license: BSD-2-Clause
       - security:
         - user
       - plan: fix
     libucl:
+      - description: Universal configuration library parser
       - directory: contrib/libucl
       - upstream: Vsevolod Stakhov
       - homepage: https://github.com/vstakhov/libucl
+      - source: https://github.com/vstakhov/libucl
+      - license: BSD-2-Clause
       - security:
         - system
         - user
@@ -493,9 +501,11 @@ Sections:
         - user
       - plan: fix
     ncurses:
+      - description: clone of System V curses
       - directory: contrib/ncurses
       - upstream: invisible-island
-      - homepage: https://invisible-island.net/ncurses/
+      - homepage: https://invisible-island.net/ncurses
+      - license: X11
       - security:
         - user
       - plan: fix
@@ -526,6 +536,7 @@ Sections:
         - user
       - plan: fix
     zlib:
+      - description: zlib compression library
       - directory: contrib/zlib
       - version: 1.3.1
       - upstream: zlib
