Register a target for SPDX files

--- a/project.conf
+++ b/project.conf
@@ -2,9 +2,9 @@ vendor=FreeBSD-Foundation
 package=alpha-omega-beach-cleaning
 version=20250922
 
-targets=dependencies.md,plan.md,security.md,format
+targets=dependencies.md,format,plan.md,security.md,spdx
 subdirs=src
-dist=COPYING,Makefile,README.md,database.yml
+dist=COPYING,Makefile,README.md,database.yml,tools/spdx.sh
 
 #dist
 [README.md]
@@ -16,6 +16,12 @@ type=command
 command=$(OBJDIR)src/aobc-generate
 depends=$(OBJDIR)src/aobc-generate,database.yml
 
+[format]
+type=command
+command=go fmt src/cmd/aobc-generate/aobc-generate.go
+phony=1
+enabled=0
+
 [plan.md]
 type=command
 command=$(OBJDIR)src/aobc-generate
@@ -26,8 +32,9 @@ type=command
 command=$(OBJDIR)src/aobc-generate
 depends=$(OBJDIR)src/aobc-generate,database.yml
 
-[format]
-type=command
-command=go fmt src/cmd/aobc-generate/aobc-generate.go
-phony=1
+[spdx]
+depends=dependencies.md,security.md,tools/spdx.sh
+type=script
+script=./tools/spdx.sh
 enabled=0
+phony=1
