database.yml: import more information

--- a/database.yml
+++ b/database.yml
@@ -260,9 +260,12 @@ Sections:
         - network
       - plan: fix
     Unbound:
+      - description: Validating, recursive, and caching DNS resolver
       - directory: contrib/unbound
+      - version: 1.23.1
       - upstream: NLnet Labs
       - homepage: https://github.com/NLnetLabs/unbound
+      - license: BSD-3-Clause
       - security:
         - network
       - depends:
@@ -360,9 +363,12 @@ Sections:
         - user
       - plan: fix
     flex:
+      - description: Fast lexical analyzer generator
       - directory: contrib/flex
+      - version: 2.6.4
       - upstream: Will Estes
       - homepage: https://github.com/westes/flex
+      - license: BSD-2-Clause
       - security:
         - build
         - user
@@ -455,9 +461,13 @@ Sections:
         - user
       - plan: fix
     libexpat:
+      - description: XML 1.0 parser written in C
       - directory: contrib/expat
+      - version: 2.7.3
       - upstream: expat
       - homepage: https://github.com/libexpat/libexpat
+      - license: MIT
+      - source: https://github.com/libexpat/libexpat/releases
       - security:
         - user
       - plan: fix
