Makefile: re-generate

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,3 +1,4 @@
+SUBDIRS	= versions
 TARGETS	= $(OBJDIR)aobc-generate$(EXEEXT)
 OBJDIR	=
 PREFIX	= /usr/local
@@ -14,7 +15,14 @@ MKDIR	= mkdir -m 0755 -p
 INSTALL	= install
 
 
-all: $(TARGETS)
+all: subdirs $(TARGETS)
+
+subdirs:
+	@for i in $(SUBDIRS); do (cd "$$i" && \
+		if [ -n "$(OBJDIR)" ]; then \
+		([ -d "$(OBJDIR)$$i" ] || $(MKDIR) -- "$(OBJDIR)$$i") && \
+		$(MAKE) OBJDIR="$(OBJDIR)$$i/"; \
+		else $(MAKE); fi) || exit; done
 
 aobc-generate_OBJS =
 aobc-generate_GOFLAGS = $(GOFLAGSF) $(GOFLAGS)
@@ -23,13 +31,30 @@ $(OBJDIR)aobc-generate$(EXEEXT): cmd/aobc-generate/aobc-generate.go
 	$(GO) build $(aobc-generate_GOFLAGS) -o $(OBJDIR)aobc-generate$(EXEEXT) cmd/aobc-generate/aobc-generate.go
 
 clean:
+	@for i in $(SUBDIRS); do (cd "$$i" && \
+		if [ -n "$(OBJDIR)" ]; then \
+		$(MAKE) OBJDIR="$(OBJDIR)$$i/" clean; \
+		else $(MAKE) clean; fi) || exit; done
 	$(RM) -- $(aobc-generate_OBJS)
 
-distclean: clean
+distclean:
+	@for i in $(SUBDIRS); do (cd "$$i" && \
+		if [ -n "$(OBJDIR)" ]; then \
+		$(MAKE) OBJDIR="$(OBJDIR)$$i/" distclean; \
+		else $(MAKE) distclean; fi) || exit; done
+	$(RM) -- $(aobc-generate_OBJS)
 	$(RM) -- $(TARGETS)
 
 install: all
+	@for i in $(SUBDIRS); do (cd "$$i" && \
+		if [ -n "$(OBJDIR)" ]; then \
+		$(MAKE) OBJDIR="$(OBJDIR)$$i/" install; \
+		else $(MAKE) install; fi) || exit; done
 
 uninstall:
+	@for i in $(SUBDIRS); do (cd "$$i" && \
+		if [ -n "$(OBJDIR)" ]; then \
+		$(MAKE) OBJDIR="$(OBJDIR)$$i/" uninstall; \
+		else $(MAKE) uninstall; fi) || exit; done
 
-.PHONY: all clean distclean install uninstall
+.PHONY: all subdirs clean distclean install uninstall
