src/versions: create a versions.yaml file

--- a/src/versions/project.conf
+++ b/src/versions/project.conf
@@ -1,4 +1,4 @@
-targets=bsddialog,bzip2,libarchive,libdialog,libedit,libevent,libpcap,ncurses
+targets=bsddialog,bzip2,libarchive,libdialog,libedit,libevent,libpcap,ncurses,versions.yaml
 dist=Makefile
 
 #targets
@@ -38,3 +38,9 @@ sources=libpcap.c
 [ncurses]
 type=binary
 sources=ncurses.c
+
+[versions.yaml]
+type=command
+command=(./bsddialog; ./bzip2; ./libarchive; ./libedit; ./libevent; ./libpcap; ./ncurses) > versions.yaml
+depends=bsddialog,bzip2,libarchive,libedit,libevent,libpcap,ncurses
+enabled=0
