src/versions: add byacc

--- a/src/versions/project.conf
+++ b/src/versions/project.conf
@@ -1,4 +1,4 @@
-targets=bsddialog,bzip2,libarchive,libdialog,libedit,libevent,libpcap,ncurses,versions.yaml
+targets=bsddialog,byacc,bzip2,libarchive,libdialog,libedit,libevent,libpcap,ncurses,versions.yaml
 dist=Makefile
 
 #targets
@@ -6,6 +6,10 @@ dist=Makefile
 type=binary
 cflags=-isystem /usr/include/private/bsddialog
 sources=bsddialog.c
+
+[byacc]
+type=binary
+sources=byacc.c
 
 [bzip2]
 type=binary
@@ -41,6 +45,6 @@ sources=ncurses.c
 
 [versions.yaml]
 type=command
-command=(./bsddialog; ./bzip2; ./libarchive; ./libedit; ./libevent; ./libpcap; ./ncurses) > versions.yaml
-depends=bsddialog,bzip2,libarchive,libedit,libevent,libpcap,ncurses
+command=(./bsddialog; ./byacc; ./bzip2; ./libarchive; ./libedit; ./libevent; ./libpcap; ./ncurses) > versions.yaml
+depends=bsddialog,byacc,bzip2,libarchive,libedit,libevent,libpcap,ncurses
 enabled=0
